--- a/addins/ManHourRecordAddIn/Wada.RecordManHourApplication/Wada.RecordManHourApplication.csproj
+++ b/addins/ManHourRecordAddIn/Wada.RecordManHourApplication/Wada.RecordManHourApplication.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Wada.IO\Wada.IO.csproj" />
     <ProjectReference Include="..\Wada.ManHourRecordService\Wada.ManHourRecordService.csproj" />
   </ItemGroup>
 
