--- a/addins/ManHourRecordAddIn/Wada.Data.OrderManagementTests/Wada.Data.OrderManagementTests.csproj
+++ b/addins/ManHourRecordAddIn/Wada.Data.OrderManagementTests/Wada.Data.OrderManagementTests.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="EmployeeRepositoryTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WorkingLedgerRepositoryTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
