エラーメッセージの不具合

--- a/addins/ManHourRecordAddIn/Wada.ManHourRecordFunctions/Wada.ManHourRecordFunctions.csproj
+++ b/addins/ManHourRecordAddIn/Wada.ManHourRecordFunctions/Wada.ManHourRecordFunctions.csproj
@@ -46,6 +46,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AchievementInputSheet.cs" />
+    <Compile Include="ValidateAbortException.cs" />
+    <Compile Include="PresentationException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
