--- a/addins/ManHourRecordAddIn/Wada.WorkingClassificationsTableSpreadSheetTests/Wada.WorkingClassificationsTableSpreadSheetTests.csproj
+++ b/addins/ManHourRecordAddIn/Wada.WorkingClassificationsTableSpreadSheetTests/Wada.WorkingClassificationsTableSpreadSheetTests.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\WorkingClassificationsTableSpreadSheet\WorkingClassificationsTableSpreadSheet.csproj" />
+    <ProjectReference Include="..\Wada.WorkingClassificationsTableSpreadSheet\Wada.WorkingClassificationsTableSpreadSheet.csproj" />
   </ItemGroup>
 
 </Project>
